Added Service Layer

--- a/SchoolDBWebAPI/appsettings.Development.json
+++ b/SchoolDBWebAPI/appsettings.Development.json
@@ -1,6 +1,8 @@
 {
   "AllowedHosts": "*",
-
+  "ConnectionStrings": {
+    "Default": "Server=DESKTOP-EEV6ESA;Database=SchoolDB;Trusted_Connection=True;"
+  },
   "Serilog": {
     "MinimumLevel": "Information",
     "Override": {
