--- a/SchoolDBWebAPI.Services.Test/SchoolDBWebAPI.Services.Test.csproj
+++ b/SchoolDBWebAPI.Services.Test/SchoolDBWebAPI.Services.Test.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -10,7 +10,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.15" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="Moq" Version="4.17.2" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -23,11 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SchoolDBWebAPI\SchoolDBWebAPI.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="JsonFiles\QuizController\" />
+    <ProjectReference Include="..\SchoolDBWebAPI.Services\SchoolDBWebAPI.Services.csproj" />
   </ItemGroup>
 
   <ItemGroup>
