Updated Project Structure

--- a/SchoolDBWebAPI.Services.Test/SchoolDBWebAPI.Services.Test.csproj
+++ b/SchoolDBWebAPI.Services.Test/SchoolDBWebAPI.Services.Test.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.15" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
+    <PackageReference Include="MockQueryable.Moq" Version="5.0.2" />
     <PackageReference Include="Moq" Version="4.17.2" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
@@ -27,7 +28,10 @@
 
   <ItemGroup>
     <None Update="JsonFiles\QuizController\AddQuiz.txt">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="JsonFiles\QuizController\Quizes.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
