Updated Mock Tests

--- a/SchoolDBWebAPI/appsettings.json
+++ b/SchoolDBWebAPI/appsettings.json
@@ -1,6 +1,18 @@
 {
   "AllowedHosts": "*",
-
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:5000"
+      },
+      "Https": {
+        "Url": "https://localhost:5001"
+      }
+    }
+  },
+  "ConnectionStrings": {
+    "Default": "Server=DESKTOP-EEV6ESA;Database=SchoolDB;Trusted_Connection=True;"
+  },
   "Serilog": {
     "MinimumLevel": "Information",
     "Override": {
