Added Identity with Refresh Token

--- a/SchoolDBWebAPI/appsettings.json
+++ b/SchoolDBWebAPI/appsettings.json
@@ -10,6 +10,13 @@
       }
     }
   },
+  "JwtBearerTokenSettings": {
+    "SecretKey": "ThisIsSomeSampleSymmetricEncryptionKey",
+    "Audience": "https://localhost:44322/",
+    "Issuer": "https://localhost:44322/",
+    "ExpiryTimeInSeconds": 60,
+    "RefreshTokenExpiryInDays": 7
+  },
   "ConnectionStrings": {
     "Default": "Server=DESKTOP-EEV6ESA;Database=SchoolDB;Trusted_Connection=True;"
   },
