--- a/SchoolDBWebAPI/appsettings.Development.json
+++ b/SchoolDBWebAPI/appsettings.Development.json
@@ -3,6 +3,13 @@
   "ConnectionStrings": {
     "Default": "Server=DESKTOP-EEV6ESA;Database=SchoolDB;Trusted_Connection=True;"
   },
+  "JwtBearerTokenSettings": {
+    "SecretKey": "ThisIsSomeSampleSymmetricEncryptionKey",
+    "Audience": "https://localhost:44322/",
+    "Issuer": "https://localhost:44322/",
+    "ExpiryTimeInSeconds": 60,
+    "RefreshTokenExpiryInDays": 7
+  },
   "Serilog": {
     "MinimumLevel": "Information",
     "Override": {
