Added SP Multiple Result with Mapper

--- a/SchoolDBWebAPI/appsettings.json
+++ b/SchoolDBWebAPI/appsettings.json
@@ -18,7 +18,7 @@
     "RefreshTokenExpiryInDays": 7
   },
   "ConnectionStrings": {
-    "Default": "Server=DESKTOP-EEV6ESA;Database=SchoolDB;Trusted_Connection=True;"
+    "Default": "Server=DESKTOP-EEV6ESA;Database=SchoolDB;Persist security info=True;user id=sa;password=123@admin;MultipleActiveResultSets=True;"
   },
   "Serilog": {
     "MinimumLevel": "Information",
