--- a/SchoolDBWebAPI/appsettings.Development.json
+++ b/SchoolDBWebAPI/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=DESKTOP-EEV6ESA;Database=SchoolDB;Trusted_Connection=True;"
+    "Default": "Server=DESKTOP-EEV6ESA;Database=SchoolDB;Persist security info=True;user id=sa;password=123@admin;MultipleActiveResultSets=True;"
   },
   "JwtBearerTokenSettings": {
     "SecretKey": "ThisIsSomeSampleSymmetricEncryptionKey",
